# finance_craftor

./: .gitignore
crypto_trader_bot/: .gitignore  README.md  env.example  pyproject.toml
crypto_trader_bot/configs/: binance_futures.yaml  default.yaml  live_btc.yaml  live_btc_demo.yaml  live_scanner_top40_5m.yaml  live_scanner_top40_5m_5rounds.yaml  live_scanner_top40_5m_5rounds_1usd_20c.yaml  live_woo_5m.yaml
crypto_trader_bot/configs/execution/: market_fast.yaml
crypto_trader_bot/configs/risk/: per_symbol_limits.yaml  portfolio_limits.yaml
crypto_trader_bot/configs/strategies/: rsi_only.yaml
crypto_trader_bot/configs/universe/: top_100_by_volume.yaml
crypto_trader_bot/docs/: architecture.md  backtest_spec.md  fee_model.md  futures_risk.md  indicator_interface.md  runbook_live.md  runbook_ui.md  strategy_interface.md  universe_selection.md
crypto_trader_bot/reports/: backtest_metrics.json  backtest_trades.csv
crypto_trader_bot/scripts/: place_bracket_demo.py  run_backtest.sh  run_paper.sh
crypto_trader_bot/src/: __init__.py
crypto_trader_bot/src/app/: __init__.py  bootstrap.py  cleanup_orders.py  main.py  session_manager.py  session_store.py  ui_server.py
crypto_trader_bot/src/backtest/: __init__.py  engine.py  metrics.py  reports.py
crypto_trader_bot/src/core/: __init__.py  config.py  env.py  events.py  types.py
crypto_trader_bot/src/data/: __init__.py  market_data_service.py
crypto_trader_bot/src/engine/: __init__.py  coordinator.py  runtime.py
crypto_trader_bot/src/exchange/: __init__.py  base.py
crypto_trader_bot/tests/: conftest.py
(+106 files in other folders)
